adjust of Cron Scheduler tasks, improving connectivity